--- a/index.html
+++ b/index.html
@@ -472,18 +472,9 @@
                 <h5>06/2014 - 03/2020</h5>
                 <p><em>Harris Rebar Colombo (Pvt) Ltd.</em></p>
                 <ul>
-                  <li>
-                    Lead in the design, development, and implementation of the
-                    graphic, layout, and production communication materials
-                  </li>
-                  <li>
-                    Delegate tasks to the 7 members of the design team and
-                    provide counsel on all aspects of the project.
-                  </li>
-                  <li>
-                    Supervise the assessment of all graphic materials in order
-                    to ensure quality and accuracy of the design
-                  </li>
+                  <li>Handling projects as a group leader.</li>
+                  <li>Distinct confident in detailing.</li>
+                  <li>RebarCAD experience for 5+ years</li>
                 </ul>
               </div>
 
@@ -556,7 +547,7 @@
                     href="assets/img/portfolio/portfolio-single-1.jpg"
                     data-gallery="portfolioGallery"
                     class="portfolio-lightbox"
-                    title="App 1"
+                    title="One Story house with Living, Dining, 3 Bed Rooms, Kitchen, Store Room, Bath Room, Verandah. Total Area of this house 1045 sq. ft."
                     ><i class="bx bx-plus"></i
                   ></a>
                 </div>
@@ -576,7 +567,7 @@
                     href="assets/img/portfolio/portfolio-double-1.jpg"
                     data-gallery="portfolioGallery"
                     class="portfolio-lightbox"
-                    title="Card asdasdsadasdasdas"
+                    title="Two Story house, Ground floor-Living & Dining, 3 Bed Rooms, Kitchen, 2 Bath Rooms, Verandah. First floor- Living & Dining, 4 Bed Rooms, 2 Bath Rooms."
                     ><i class="bx bx-plus"></i
                   ></a>
                 </div>
@@ -596,7 +587,8 @@
                     href="assets/img/portfolio/portfolio-double-2.jpg"
                     data-gallery="portfolioGallery"
                     class="portfolio-lightbox"
-                    title="Card asdasdsadasdasdas"
+                    title="Two Story house, Ground floor-Living Area, 2 Bed Rooms, Kitchen, 2 Bath Rooms, Verandah. First floor- Living & Dining, 4 Bed Rooms, 3 Bath Rooms, Kitchen.
+                    Total Area of this house 5058 sq. ft."
                     ><i class="bx bx-plus"></i
                   ></a>
                 </div>
@@ -616,7 +608,7 @@
                     href="assets/img/portfolio/portfolio-single-2.jpg"
                     data-gallery="portfolioGallery"
                     class="portfolio-lightbox"
-                    title="App 2"
+                    title="One Story house with Living, TV Lobby, Pantry, 4 Bed Rooms, Kitchen, 3 Bath Rooms, Verandah. Total Area of this house 2020 sq. ft."
                     ><i class="bx bx-plus"></i
                   ></a>
                 </div>
@@ -636,7 +628,7 @@
                     href="assets/img/portfolio/portfolio-double-3.jpg"
                     data-gallery="portfolioGallery"
                     class="portfolio-lightbox"
-                    title="Card asdasdsadasdasdas"
+                    title="Two Story house, Ground floor-Living & Dining, Pantry, Bed Room, Store Room, Toilet, Bath Room, Verandah. First floor- Living & Dining, 2 Bed Rooms, Store Room, Bath Room. Area of this house 1986 sq. ft."
                     ><i class="bx bx-plus"></i
                   ></a>
                 </div>
@@ -656,7 +648,8 @@
                     href="assets/img/portfolio/portfolio-single-3.jpg"
                     data-gallery="portfolioGallery"
                     class="portfolio-lightbox"
-                    title="App 2"
+                    title="One Story house with Living & Dining, Pantry, Bed Room, Kitchen, Bath Room. 
+                    Total Area of this house 397 sq. ft."
                     ><i class="bx bx-plus"></i
                   ></a>
                 </div>
@@ -676,7 +669,7 @@
                     href="assets/img/portfolio/portfolio-single-4.jpg"
                     data-gallery="portfolioGallery"
                     class="portfolio-lightbox"
-                    title="App 2"
+                    title="Two Story house, Ground floor-Living & Dining, Pantry, 3 Bed Rooms, Bath Room, Kitchen, Verandah. First floor- Living & Dining, Pantry, 3 Bed Rooms, Bath Room, Kitchen. Area of this house 2476 sq. ft."
                     ><i class="bx bx-plus"></i
                   ></a>
                 </div>
