added final changes with images

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <div class="d-flex flex-column">
         <div class="profile">
           <img
-            src="assets/img/profile-img.jpg"
+            src="assets/img/profile-img.jpeg"
             alt=""
             class="img-fluid rounded-circle"
           />
@@ -169,19 +169,19 @@
             <h2>About</h2>
             <p>
               I have completed NCED (2013) and experienced more than 5 years in
-              the Structural Detailing company as a Detailer. I would like to
-              participate in innovative projects.I have also experienced in
-              Architectural drawings more than 5 years. I am an Expert in
+              the Structural Detailing company as a RebarCAD Detailer. I would
+              like to participate in innovative projects.I have also experienced
+              in Architectural drawings more than 5 years. I am an Expert in
               AutoCAD 2010-2018 for 2D Design.
             </p>
           </div>
 
           <div class="row">
             <div class="col-lg-4" data-aos="fade-right">
-              <img src="assets/img/profile-img.jpg" class="img-fluid" alt="" />
+              <img src="assets/img/profile-img.jpeg" class="img-fluid" alt="" />
             </div>
             <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-              <h3>Draftsperson &amp; AutoCAD Designer.</h3>
+              <h3>Draftsperson, RebarCAD Detailer &amp; AutoCAD Designer.</h3>
               <p class="fst-italic">
                 I'm passionate with Drafting with AutoCAD with creative ideas. I
                 am capable of designing architectural Floor Plans, Elevation
@@ -201,7 +201,8 @@
                     </li>
                     <li>
                       <i class="bi bi-chevron-right"></i>
-                      <strong>Website:</strong> <span>www.example.com</span>
+                      <strong>Website:</strong>
+                      <span>kasun-amaradiwakara.github.io</span>
                     </li>
                     <li>
                       <i class="bi bi-chevron-right"></i>
@@ -656,7 +657,7 @@
               </div>
             </div>
 
-            <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="col-lg-4 col-md-6 portfolio-item filter-card">
               <!-- app item -->
               <div class="portfolio-wrap">
                 <img
@@ -755,7 +756,7 @@
               </h4>
               <p class="description">
                 American (Seattle) High Rise Structure Project and I handled
-                this project as a Group Leader
+                this project as a Rebar Detailer / Group Leader
               </p>
             </div>
             <div
