added rebarCAD section

--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@
                 <li data-filter="*" class="filter-active">All</li>
                 <li data-filter=".filter-app">Single Story</li>
                 <li data-filter=".filter-card">Double Story</li>
-                <!-- <li data-filter=".filter-web">Web</li> -->
+                <li data-filter=".filter-web">RebarCAD Drawings</li>
               </ul>
             </div>
           </div>
@@ -555,6 +555,25 @@
               </div>
             </div>
 
+            <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+              <div class="portfolio-wrap">
+                <img
+                  src="assets/img/portfolio/BASEMENT WALL SH.1.jpg"
+                  class="img-fluid"
+                  alt=""
+                />
+                <div class="portfolio-links">
+                  <a
+                    href="assets/img/portfolio/BASEMENT WALL SH.1.jpg"
+                    data-gallery="portfolioGallery"
+                    class="portfolio-lightbox"
+                    title="Basement Wall Sheet 1"
+                    ><i class="bx bx-plus"></i
+                  ></a>
+                </div>
+              </div>
+            </div>
+
             <div class="col-lg-4 col-md-6 portfolio-item filter-card">
               <!-- card item -->
               <div class="portfolio-wrap">
@@ -569,6 +588,25 @@
                     data-gallery="portfolioGallery"
                     class="portfolio-lightbox"
                     title="Two Story house, Ground floor-Living & Dining, 3 Bed Rooms, Kitchen, 2 Bath Rooms, Verandah. First floor- Living & Dining, 4 Bed Rooms, 2 Bath Rooms."
+                    ><i class="bx bx-plus"></i
+                  ></a>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+              <div class="portfolio-wrap">
+                <img
+                  src="assets/img/portfolio/BASEMENT WALL SH.2.jpg"
+                  class="img-fluid"
+                  alt=""
+                />
+                <div class="portfolio-links">
+                  <a
+                    href="assets/img/portfolio/BASEMENT WALL SH.2.jpg"
+                    data-gallery="portfolioGallery"
+                    class="portfolio-lightbox"
+                    title="Basement Wall Sheet 2"
                     ><i class="bx bx-plus"></i
                   ></a>
                 </div>
@@ -596,6 +634,44 @@
               </div>
             </div>
 
+            <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+              <div class="portfolio-wrap">
+                <img
+                  src="assets/img/portfolio/CORE WALL SH.1.jpg"
+                  class="img-fluid"
+                  alt=""
+                />
+                <div class="portfolio-links">
+                  <a
+                    href="assets/img/portfolio/CORE WALL SH.1.jpg"
+                    data-gallery="portfolioGallery"
+                    class="portfolio-lightbox"
+                    title="Core Wall Sheet 1"
+                    ><i class="bx bx-plus"></i
+                  ></a>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+              <div class="portfolio-wrap">
+                <img
+                  src="assets/img/portfolio/RCC SLAB SH.3.jpg"
+                  class="img-fluid"
+                  alt=""
+                />
+                <div class="portfolio-links">
+                  <a
+                    href="assets/img/portfolio/RCC SLAB SH.3.jpg"
+                    data-gallery="portfolioGallery"
+                    class="portfolio-lightbox"
+                    title="RCC Slab Sheet 3"
+                    ><i class="bx bx-plus"></i
+                  ></a>
+                </div>
+              </div>
+            </div>
+
             <div class="col-lg-4 col-md-6 portfolio-item filter-app">
               <!-- app item -->
               <div class="portfolio-wrap">
@@ -616,6 +692,63 @@
               </div>
             </div>
 
+            <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+              <div class="portfolio-wrap">
+                <img
+                  src="assets/img/portfolio/CORE WALL SH.2.jpg"
+                  class="img-fluid"
+                  alt=""
+                />
+                <div class="portfolio-links">
+                  <a
+                    href="assets/img/portfolio/CORE WALL SH.2.jpg"
+                    data-gallery="portfolioGallery"
+                    class="portfolio-lightbox"
+                    title="Core Wall Sheet 2"
+                    ><i class="bx bx-plus"></i
+                  ></a>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+              <div class="portfolio-wrap">
+                <img
+                  src="assets/img/portfolio/RCC SLAB SH.1.jpg"
+                  class="img-fluid"
+                  alt=""
+                />
+                <div class="portfolio-links">
+                  <a
+                    href="assets/img/portfolio/RCC SLAB SH.1.jpg"
+                    data-gallery="portfolioGallery"
+                    class="portfolio-lightbox"
+                    title="RCC Slab Sheet 1"
+                    ><i class="bx bx-plus"></i
+                  ></a>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+              <div class="portfolio-wrap">
+                <img
+                  src="assets/img/portfolio/RCC SLAB SH.2.jpg"
+                  class="img-fluid"
+                  alt=""
+                />
+                <div class="portfolio-links">
+                  <a
+                    href="assets/img/portfolio/RCC SLAB SH.2.jpg"
+                    data-gallery="portfolioGallery"
+                    class="portfolio-lightbox"
+                    title="RCC Slab Sheet 2"
+                    ><i class="bx bx-plus"></i
+                  ></a>
+                </div>
+              </div>
+            </div>
+
             <div class="col-lg-4 col-md-6 portfolio-item filter-card">
               <!-- card item -->
               <div class="portfolio-wrap">
@@ -630,6 +763,63 @@
                     data-gallery="portfolioGallery"
                     class="portfolio-lightbox"
                     title="Two Story house, Ground floor-Living & Dining, Pantry, Bed Room, Store Room, Toilet, Bath Room, Verandah. First floor- Living & Dining, 2 Bed Rooms, Store Room, Bath Room. Area of this house 1986 sq. ft."
+                    ><i class="bx bx-plus"></i
+                  ></a>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+              <div class="portfolio-wrap">
+                <img
+                  src="assets/img/portfolio/SHEAR WALL.jpg"
+                  class="img-fluid"
+                  alt=""
+                />
+                <div class="portfolio-links">
+                  <a
+                    href="assets/img/portfolio/SHEAR WALL.jpg"
+                    data-gallery="portfolioGallery"
+                    class="portfolio-lightbox"
+                    title="Shear Wall"
+                    ><i class="bx bx-plus"></i
+                  ></a>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+              <div class="portfolio-wrap">
+                <img
+                  src="assets/img/portfolio/FOUNDATION PLAN.jpg"
+                  class="img-fluid"
+                  alt=""
+                />
+                <div class="portfolio-links">
+                  <a
+                    href="assets/img/portfolio/FOUNDATION PLAN.jpg"
+                    data-gallery="portfolioGallery"
+                    class="portfolio-lightbox"
+                    title="Foundation Plan"
+                    ><i class="bx bx-plus"></i
+                  ></a>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+              <div class="portfolio-wrap">
+                <img
+                  src="assets/img/portfolio/FOUNDATION WALL DOWEL PLAN.jpg"
+                  class="img-fluid"
+                  alt=""
+                />
+                <div class="portfolio-links">
+                  <a
+                    href="assets/img/portfolio/FOUNDATION WALL DOWEL PLAN.jpg"
+                    data-gallery="portfolioGallery"
+                    class="portfolio-lightbox"
+                    title="Foundation Wall Dowel Plan"
                     ><i class="bx bx-plus"></i
                   ></a>
                 </div>
@@ -657,6 +847,25 @@
               </div>
             </div>
 
+            <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+              <div class="portfolio-wrap">
+                <img
+                  src="assets/img/portfolio/ELEVATOR PIT DETAIL.jpg"
+                  class="img-fluid"
+                  alt=""
+                />
+                <div class="portfolio-links">
+                  <a
+                    href="assets/img/portfolio/ELEVATOR PIT DETAIL.jpg"
+                    data-gallery="portfolioGallery"
+                    class="portfolio-lightbox"
+                    title="Elevator Pit Detail"
+                    ><i class="bx bx-plus"></i
+                  ></a>
+                </div>
+              </div>
+            </div>
+
             <div class="col-lg-4 col-md-6 portfolio-item filter-card">
               <!-- app item -->
               <div class="portfolio-wrap">
@@ -671,6 +880,63 @@
                     data-gallery="portfolioGallery"
                     class="portfolio-lightbox"
                     title="Two Story house, Ground floor-Living & Dining, Pantry, 3 Bed Rooms, Bath Room, Kitchen, Verandah. First floor- Living & Dining, Pantry, 3 Bed Rooms, Bath Room, Kitchen. Area of this house 2476 sq. ft."
+                    ><i class="bx bx-plus"></i
+                  ></a>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+              <div class="portfolio-wrap">
+                <img
+                  src="assets/img/portfolio/GRADE BEAMS SH.1.jpg"
+                  class="img-fluid"
+                  alt=""
+                />
+                <div class="portfolio-links">
+                  <a
+                    href="assets/img/portfolio/GRADE BEAMS SH.1.jpg"
+                    data-gallery="portfolioGallery"
+                    class="portfolio-lightbox"
+                    title="Grade Beams Sheet 1"
+                    ><i class="bx bx-plus"></i
+                  ></a>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+              <div class="portfolio-wrap">
+                <img
+                  src="assets/img/portfolio/GRADE BEAMS SH.2.jpg"
+                  class="img-fluid"
+                  alt=""
+                />
+                <div class="portfolio-links">
+                  <a
+                    href="assets/img/portfolio/GRADE BEAMS SH.2.jpg"
+                    data-gallery="portfolioGallery"
+                    class="portfolio-lightbox"
+                    title="Grade Beams Sheet 2"
+                    ><i class="bx bx-plus"></i
+                  ></a>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+              <div class="portfolio-wrap">
+                <img
+                  src="assets/img/portfolio/PILE CAPS.jpg"
+                  class="img-fluid"
+                  alt=""
+                />
+                <div class="portfolio-links">
+                  <a
+                    href="assets/img/portfolio/PILE CAPS.jpg"
+                    data-gallery="portfolioGallery"
+                    class="portfolio-lightbox"
+                    title="Grade Beams Sheet 2"
                     ><i class="bx bx-plus"></i
                   ></a>
                 </div>
