added another title

--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
             alt=""
             class="img-fluid rounded-circle"
           />
+          <h1 class="text-light"><a href="index.html">RebarCAD Detailer</a></h1>
           <h1 class="text-light"><a href="index.html">Draftsperson</a></h1>
           <div class="social-links mt-3 text-center">
             <a
