--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
             alt=""
             class="img-fluid rounded-circle"
           />
-          <h1 class="text-light"><a href="index.html">RebarCAD Detailer</a></h1>
-          <h1 class="text-light"><a href="index.html">Draftsperson</a></h1>
+          <h1 class="text-light"><a href="index.html">Hi</a></h1>
+          <h1 class="text-light"><a href="index.html">Welcome</a></h1>
           <div class="social-links mt-3 text-center">
             <a
               href="https://www.linkedin.com/in/kasun-amaradiwakara/"
@@ -155,7 +155,7 @@
           I'm
           <span
             class="typed"
-            data-typed-items="a Rebar Detailer,a Structural Draftsperson,a Rebar Scheduler,a Freelancer"
+            data-typed-items="a Rebar Detailer.,a Structural Draftsperson., a Rebar Scheduler."
           ></span>
         </p>
       </div>
@@ -183,13 +183,13 @@
               <img src="assets/img/profile-img.jpeg" class="img-fluid" alt="" />
             </div>
             <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-              <h3>Draftsperson, RebarCAD Detailer &amp; AutoCAD Designer.</h3>
-              <p class="fst-italic">
+              <h3>Rebar Detailer, Rebar Scheduler &amp; Structural Draftsperson.</h3>
+              <!-- <p class="fst-italic">
                 I'm passionate with Drafting with AutoCAD with creative ideas. I
                 am capable of designing architectural Floor Plans, Elevation
                 Plans, Facade Plans, Site Plans, Section Plans, Detail Plans &
                 2D/ 3D, of any category.
-              </p>
+              </p> -->
               <div class="row">
                 <div class="col-lg-6">
                   <ul>
@@ -328,12 +328,12 @@
           <div class="row skills-content">
             <div class="col-lg-6" data-aos="fade-up">
               <div class="progress">
-                <span class="skill">AutoCAD <i class="val">90%</i></span>
+                <span class="skill">AutoCAD <i class="val">100%</i></span>
                 <div class="progress-bar-wrap">
                   <div
                     class="progress-bar"
                     role="progressbar"
-                    aria-valuenow="90"
+                    aria-valuenow="100"
                     aria-valuemin="0"
                     aria-valuemax="100"
                   ></div>
@@ -341,30 +341,31 @@
               </div>
 
               <div class="progress">
-                <span class="skill">RebarCAD <i class="val">90%</i></span>
+                <span class="skill">RebarCAD <i class="val">100%</i></span>
                 <div class="progress-bar-wrap">
                   <div
                     class="progress-bar"
                     role="progressbar"
-                    aria-valuenow="90"
+                    aria-valuenow="100"
                     aria-valuemin="0"
                     aria-valuemax="100"
                   ></div>
                 </div>
               </div>
 
-              <!-- <div class="progress">
-                <span class="skill">Revit <i class="val">80%</i></span>
+              <div class="progress">
+                <span class="skill">RGS Rebar
+                  <i class="val">100%</i></span>
                 <div class="progress-bar-wrap">
                   <div
                     class="progress-bar"
                     role="progressbar"
-                    aria-valuenow="80"
+                    aria-valuenow="100"
                     aria-valuemin="0"
                     aria-valuemax="100"
                   ></div>
                 </div>
-              </div> -->
+              </div>
             </div>
 
             <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
