--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                   <ul>
                     <li>
                       <i class="bi bi-chevron-right"></i> <strong>Age:</strong>
-                      <span>28</span>
+                      <span id="age-container"></span>
                     </li>
                     <li>
                       <i class="bi bi-chevron-right"></i>
@@ -245,6 +245,13 @@
                   </ul>
                 </div>
               </div>
+              <script>
+                const today = new Date();
+                const date = new Date(1992, 12, 12, 0, 0, 0);
+                const difference = (today - date) / (1000 * 60 * 60 * 24 * 365);
+                document.getElementById("age-container").textContent =
+                  difference.toFixed(0);
+              </script>
               <!-- <p>
                 Officiis eligendi itaque labore et dolorum mollitia officiis
                 optio vero. Quisquam sunt adipisci omnis et ut. Nulla
@@ -577,14 +584,20 @@
                       class="bx bx-file"
                       style="font-size: 40px; color: #149ddd"
                     ></i>
-                    <div style="margin-top: auto; margin-bottom: auto; font-size:14px !important;">
-                      BASEMENT WALL
+                    <div
+                      style="
+                        margin-top: auto;
+                        margin-bottom: auto;
+                        font-size: 14px !important;
+                      "
+                    >
+                      CIRCULAR WALL
                     </div>
                   </div>
                 </div>
                 <div class="portfolio-links">
                   <a
-                    href="assets/pdf/RebarCAD/BASEMENT WALL.pdf"
+                    href="assets/pdf/RGS Rebar/CIRCULAR WALL.pdf"
                     target="_blank"
                     ><i class="bx bx-link-external"></i
                   ></a>
@@ -600,14 +613,20 @@
                       class="bx bx-file"
                       style="font-size: 40px; color: #149ddd"
                     ></i>
-                    <div style="margin-top: auto; margin-bottom: auto; font-size:14px !important;">
-                      CIRCULAR WALL
+                    <div
+                      style="
+                        margin-top: auto;
+                        margin-bottom: auto;
+                        font-size: 14px !important;
+                      "
+                    >
+                      BASEMENT WALL
                     </div>
                   </div>
                 </div>
                 <div class="portfolio-links">
                   <a
-                    href="assets/pdf/RGS Rebar/CIRCULAR WALL.pdf"
+                    href="assets/pdf/RebarCAD/BASEMENT WALL.pdf"
                     target="_blank"
                     ><i class="bx bx-link-external"></i
                   ></a>
@@ -623,7 +642,13 @@
                       class="bx bx-file"
                       style="font-size: 40px; color: #149ddd"
                     ></i>
-                    <div style="margin-top: auto; margin-bottom: auto; font-size:14px !important;">
+                    <div
+                      style="
+                        margin-top: auto;
+                        margin-bottom: auto;
+                        font-size: 14px !important;
+                      "
+                    >
                       PRECAST PANEL 1
                     </div>
                   </div>
@@ -646,7 +671,13 @@
                       class="bx bx-file"
                       style="font-size: 40px; color: #149ddd"
                     ></i>
-                    <div style="margin-top: auto; margin-bottom: auto; font-size:14px !important;">
+                    <div
+                      style="
+                        margin-top: auto;
+                        margin-bottom: auto;
+                        font-size: 14px !important;
+                      "
+                    >
                       CORE WALL SH.2
                     </div>
                   </div>
@@ -669,7 +700,13 @@
                       class="bx bx-file"
                       style="font-size: 40px; color: #149ddd"
                     ></i>
-                    <div style="margin-top: auto; margin-bottom: auto; font-size:14px !important;">
+                    <div
+                      style="
+                        margin-top: auto;
+                        margin-bottom: auto;
+                        font-size: 14px !important;
+                      "
+                    >
                       COLUMN
                     </div>
                   </div>
@@ -690,7 +727,13 @@
                       class="bx bx-file"
                       style="font-size: 40px; color: #149ddd"
                     ></i>
-                    <div style="margin-top: auto; margin-bottom: auto; font-size:14px !important;">
+                    <div
+                      style="
+                        margin-top: auto;
+                        margin-bottom: auto;
+                        font-size: 14px !important;
+                      "
+                    >
                       FOUNDATION PLAN
                     </div>
                   </div>
@@ -713,7 +756,13 @@
                       class="bx bx-file"
                       style="font-size: 40px; color: #149ddd"
                     ></i>
-                    <div style="margin-top: auto; margin-bottom: auto; font-size:14px !important;">
+                    <div
+                      style="
+                        margin-top: auto;
+                        margin-bottom: auto;
+                        font-size: 14px !important;
+                      "
+                    >
                       SLAB TOP REO
                     </div>
                   </div>
@@ -736,7 +785,13 @@
                       class="bx bx-file"
                       style="font-size: 40px; color: #149ddd"
                     ></i>
-                    <div style="margin-top: auto; margin-bottom: auto; font-size:14px !important;">
+                    <div
+                      style="
+                        margin-top: auto;
+                        margin-bottom: auto;
+                        font-size: 14px !important;
+                      "
+                    >
                       FOUNDATION WALL DOWEL PLAN
                     </div>
                   </div>
@@ -759,7 +814,13 @@
                       class="bx bx-file"
                       style="font-size: 40px; color: #149ddd"
                     ></i>
-                    <div style="margin-top: auto; margin-bottom: auto; font-size:14px !important;">
+                    <div
+                      style="
+                        margin-top: auto;
+                        margin-bottom: auto;
+                        font-size: 14px !important;
+                      "
+                    >
                       PRECAST PANEL 2
                     </div>
                   </div>
@@ -782,7 +843,13 @@
                       class="bx bx-file"
                       style="font-size: 40px; color: #149ddd"
                     ></i>
-                    <div style="margin-top: auto; margin-bottom: auto; font-size:14px !important;">
+                    <div
+                      style="
+                        margin-top: auto;
+                        margin-bottom: auto;
+                        font-size: 14px !important;
+                      "
+                    >
                       CORE WALL SH.1
                     </div>
                   </div>
@@ -805,7 +872,13 @@
                       class="bx bx-file"
                       style="font-size: 40px; color: #149ddd"
                     ></i>
-                    <div style="margin-top: auto; margin-bottom: auto; font-size:14px !important;">
+                    <div
+                      style="
+                        margin-top: auto;
+                        margin-bottom: auto;
+                        font-size: 14px !important;
+                      "
+                    >
                       SLAB BOTTOM REO
                     </div>
                   </div>
@@ -828,7 +901,13 @@
                       class="bx bx-file"
                       style="font-size: 40px; color: #149ddd"
                     ></i>
-                    <div style="margin-top: auto; margin-bottom: auto; font-size:14px !important;">
+                    <div
+                      style="
+                        margin-top: auto;
+                        margin-bottom: auto;
+                        font-size: 14px !important;
+                      "
+                    >
                       SHEAR WALL
                     </div>
                   </div>
@@ -868,7 +947,13 @@
                       class="bx bx-file"
                       style="font-size: 40px; color: #149ddd"
                     ></i>
-                    <div style="margin-top: auto; margin-bottom: auto; font-size:14px !important;">
+                    <div
+                      style="
+                        margin-top: auto;
+                        margin-bottom: auto;
+                        font-size: 14px !important;
+                      "
+                    >
                       WALL 1
                     </div>
                   </div>
@@ -889,7 +974,13 @@
                       class="bx bx-file"
                       style="font-size: 40px; color: #149ddd"
                     ></i>
-                    <div style="margin-top: auto; margin-bottom: auto; font-size:14px !important;">
+                    <div
+                      style="
+                        margin-top: auto;
+                        margin-bottom: auto;
+                        font-size: 14px !important;
+                      "
+                    >
                       RCC SLAB SH.2
                     </div>
                   </div>
@@ -912,7 +1003,13 @@
                       class="bx bx-file"
                       style="font-size: 40px; color: #149ddd"
                     ></i>
-                    <div style="margin-top: auto; margin-bottom: auto; font-size:14px !important;">
+                    <div
+                      style="
+                        margin-top: auto;
+                        margin-bottom: auto;
+                        font-size: 14px !important;
+                      "
+                    >
                       WALL 2
                     </div>
                   </div>
@@ -933,7 +1030,13 @@
                       class="bx bx-file"
                       style="font-size: 40px; color: #149ddd"
                     ></i>
-                    <div style="margin-top: auto; margin-bottom: auto; font-size:14px !important;">
+                    <div
+                      style="
+                        margin-top: auto;
+                        margin-bottom: auto;
+                        font-size: 14px !important;
+                      "
+                    >
                       RCC SLAB SH.1
                     </div>
                   </div>
@@ -956,7 +1059,13 @@
                       class="bx bx-file"
                       style="font-size: 40px; color: #149ddd"
                     ></i>
-                    <div style="margin-top: auto; margin-bottom: auto; font-size:14px !important;">
+                    <div
+                      style="
+                        margin-top: auto;
+                        margin-bottom: auto;
+                        font-size: 14px !important;
+                      "
+                    >
                       WALL 3
                     </div>
                   </div>
@@ -977,15 +1086,19 @@
                       class="bx bx-file"
                       style="font-size: 40px; color: #149ddd"
                     ></i>
-                    <div style="margin-top: auto; margin-bottom: auto; font-size:14px !important;">
-                      GRADE BEAMS SH.2
+                    <div
+                      style="
+                        margin-top: auto;
+                        margin-bottom: auto;
+                        font-size: 14px !important;
+                      "
+                    >
+                      GRADE BEAMS
                     </div>
                   </div>
                 </div>
                 <div class="portfolio-links">
-                  <a
-                    href="assets/pdf/RebarCAD/GRADE BEAMS SH.2.pdf"
-                    target="_blank"
+                  <a href="assets/pdf/RebarCAD/GRADE BEAMS.pdf" target="_blank"
                     ><i class="bx bx-link-external"></i
                   ></a>
                 </div>
@@ -1000,7 +1113,13 @@
                       class="bx bx-file"
                       style="font-size: 40px; color: #149ddd"
                     ></i>
-                    <div style="margin-top: auto; margin-bottom: auto; font-size:14px !important;">
+                    <div
+                      style="
+                        margin-top: auto;
+                        margin-bottom: auto;
+                        font-size: 14px !important;
+                      "
+                    >
                       WALL 4
                     </div>
                   </div>
@@ -1021,7 +1140,13 @@
                       class="bx bx-file"
                       style="font-size: 40px; color: #149ddd"
                     ></i>
-                    <div style="margin-top: auto; margin-bottom: auto; font-size:14px !important;">
+                    <div
+                      style="
+                        margin-top: auto;
+                        margin-bottom: auto;
+                        font-size: 14px !important;
+                      "
+                    >
                       RCC SLAB SH.3
                     </div>
                   </div>
